@@ -159,6 +159,7 @@ sub buildsystems_init {
 	);
 	$args{options}{$_} = $options{$_} foreach keys(%options);
 	Debian::Debhelper::Dh_Lib::init(%args);
+	Debian::Debhelper::Dh_Lib::set_buildflags();
 	set_parallel($max_parallel);
 }
 
